# py-gol

./: .gitignore  .python-version  Makefile  README.md  actor.py  game.py  gol.py  pyproject.toml  setup.py
.cursor/rules/: .markdownlint.json  000-cursor-rules.mdc  010-domain-types.mdc  050-code-comments.mdc  100-git-commit-messages.mdc  100-git-conventional-commits.mdc  101-makefile.mdc  101-source-organization.mdc  1301-thread-safe-testing.mdc  1303-concurrent-test-organization.mdc  300-test-type-hints.mdc  301-test-modifications.mdc  301-thread-safe-testing.mdc  302-actor-type-safety.mdc  303-concurrent-test-organization.mdc  304-pure-function-patterns.mdc  400-md-docs.mdc  801-test-after-implementation.mdc  801-two-phase-implementation.mdc  802-test-after-implementation.mdc
.cursor/rules/core/: cursor-rules.mdc  git-commit-command-syntax.mdc  git-commit-messages.mdc  git-commit-standards.mdc  git-commit.mdc  git-making-commits.mdc  makefile.mdc  markdown-docs.mdc  pure-function-patterns.mdc  test-modifications.mdc  test-writing.mdc  two-phase-implementation.mdc  verify-after-implementation.mdc
.cursor/rules/python/: python-code-comments.mdc  python-pure-function-patterns.mdc  python-source-organization.mdc  python-test-modifications.mdc  python-types.mdc
docs/: dependencies.md  diagrams.md  gosper-glider-gun.txt  implementation_plan.md  requirements.md
specs/: implementation_plan.md  requirements.md  viewport_sizing.md
specs/simulation/: boundary_conditions.md
specs/ui/: controls.md  viewport_sizing.md
src/gol/: __init__.py  __main__.py  actor.py  commands.py  controller.py  grid.py  life.py  main.py  messaging.py  metrics.py  pattern_types.py  patterns.py  renderer.py  rle_parser.py  state.py  types.py
tests/: __init__.py  conftest.py  test_actor.py  test_controller.py  test_controls.py  test_grid.py  test_life.py  test_main.py  test_messaging.py  test_metrics.py  test_pattern_integration.py  test_pattern_storage.py  test_patterns.py  test_renderer.py  test_renderer_init.py  test_renderer_metrics.py  test_renderer_pure.py  test_rle_parser.py  test_speed_controls.py  test_viewport.py
tests/test_data/: patterns.json
